Разделена генерация адресов и заказаов