@@ -5,8 +5,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
 import ru.taxi.generator.address.AddressEntity;
 import ru.taxi.generator.address.AddressRepository;
 import ru.taxi.generator.geoapi.GoogleApiDistanceMatrix;
@@ -19,12 +17,10 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -42,49 +38,80 @@ public class ArtificialDataGenerator {
     private final TripRecordRepository tripRecordRepository;
     private final AddressRepository addressRepository;
     private final GeneratorParamsRepository generatorParamsRepository;
+    private static final int MULTIPLIER = 2;
 
-    public void generate() {
+    public void generateAddresses() {
         generatorParamsRepository.findById(BigInteger.ONE).ifPresent(gParams -> {
             if (gParams.isClean()) {
                 tripRecordRepository.deleteAll();
-                addressRepository.deleteAll();
             }
-            ExecutorService executorService = Executors.newCachedThreadPool();
             final int days = (int) gParams.getTripsDateLeftBorder().until(gParams.getTripsDateRightBorder(), ChronoUnit.DAYS);
             List<LocalDate> dateRange = Stream.iterate(gParams.getTripsDateLeftBorder(), d -> d.plusDays(1))
                     .limit(days).collect(Collectors.toList());
-            List<Callable<Boolean>> tasks = dateRange.stream().<Callable<Boolean>>map(date -> () -> generate(gParams, date))
-                    .collect(Collectors.toList());
-            try {
-                List<Future<Boolean>> results = executorService.invokeAll(tasks);
-                log.info(results.toString());
-                executorService.shutdown();
-                final boolean done = executorService.awaitTermination(60, TimeUnit.MINUTES);
-                log.info("Executor done {}", done);
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
+            if (addressRepository.count() < 5000) {
+                CompletableFuture.runAsync(() -> generateTotal(gParams, dateRange.size() * gParams.getOrdersPerDayNumber() * MULTIPLIER))
+                        .join();
             }
+
         });
     }
 
-    public boolean generate(GeneratorParametersEntity gParams, LocalDate date) {
-        IntStream.range(0, gParams.getOrdersPerDayNumber()).forEach(i -> generateTrip(gParams, date));
+    public void generateTrips() {
+        generatorParamsRepository.findById(BigInteger.ONE).ifPresent(gParams -> {
+            if (gParams.isClean()) {
+                tripRecordRepository.deleteAll();
+            }
+            final int days = (int) gParams.getTripsDateLeftBorder().until(gParams.getTripsDateRightBorder(), ChronoUnit.DAYS);
+            List<LocalDate> dateRange = Stream.iterate(gParams.getTripsDateLeftBorder(), d -> d.plusDays(1))
+                    .limit(days).collect(Collectors.toList());
+            dateRange.forEach(date -> {
+                generateTripForDate(gParams, date);
+                log.info("Date {} finished", date);
+            });
+        });
+    }
+
+    private void generateTotal(GeneratorParametersEntity gParams, int totalAddresses) {
+        IntStream.range(0, totalAddresses).forEach(i -> {
+            try {
+                createAndSaveNewAddress(new AtomicReference<>(gParams));
+                log.info("Address job {} finished. To do: {}", i, totalAddresses - i);
+            } catch (Exception e) {
+                log.error("Address generation failed with error {}", e.toString());
+            }
+        });
+        log.info("Addresses job finished");
+    }
+
+    private boolean createAndSaveNewAddress(AtomicReference<GeneratorParametersEntity> gParams) {
+        LatLng randomPoint = ArtificialDataHelper.getRandomPoint(gParams.get());
+        Optional<AddressEntity> byLatAndLng = addressRepository.findByLatAndLng(String.valueOf(randomPoint.lat), String.valueOf(randomPoint.lng));
+        if (byLatAndLng.isPresent()) {
+            return true;
+        }
+        AddressEntity addressEntity = supplyAddress(randomPoint, gParams.get().getLanguage());
+        if (addressEntity != null) {
+            addressRepository.save(addressEntity);
+            log.info("New address found. {}", addressEntity.getFormattedAddress());
+            return true;
+        }
+        return false;
+    }
+
+    private boolean generateTripForDate(GeneratorParametersEntity gParams, LocalDate date) {
+        IntStream.range(0, gParams.getOrdersPerDayNumber()).forEach(i -> generateTrip(date));
         return true;
     }
 
-    private void generateTrip(GeneratorParametersEntity gParams, LocalDate date) {
+    private void generateTrip(LocalDate date) {
         try {
-            Pair<AddressEntity, AddressEntity> fromTo = supplyAddresses(supplyMapPoints(gParams), gParams.getLanguage());
+            Pair<AddressEntity, AddressEntity> fromTo = supplyAddresses();
             TripRecordEntity trip = supplySingleTrip(fromTo, date);
-            saveOnComplete(trip);
-            log.info("Успешная генерация");
-        } catch (Exception ignored) {
-            log.info("Не удалось сгенерировать");
+            tripRecordRepository.save(trip);
+            log.info("Успешная генерация для даты {}", date);
+        } catch (Exception e) {
+            log.info("Не удалось сгенерировать для даты {} >>{} ", date, e.toString());
         }
-    }
-
-    private Pair<LatLng, LatLng> supplyMapPoints(GeneratorParametersEntity gParams) {
-        return Pair.of(ArtificialDataHelper.getRandomPoint(gParams), ArtificialDataHelper.getRandomPoint(gParams));
     }
 
     private TripRecordEntity supplySingleTrip(Pair<AddressEntity, AddressEntity> fromTo, LocalDate date) {
@@ -108,19 +135,13 @@ public class ArtificialDataGenerator {
 //        return Pair.of(from.join(), to.join());
 //    }
 
-    private Pair<AddressEntity, AddressEntity> supplyAddresses(Pair<LatLng, LatLng> fromToPair, String lang) {
-        AddressEntity from = supplyAddress(fromToPair.getFirst(), lang);
-        AddressEntity to = supplyAddress(fromToPair.getSecond(), lang);
-        return Pair.of(from, to);
+    private Pair<AddressEntity, AddressEntity> supplyAddresses() {
+        List<AddressEntity> random = addressRepository.findRandom();
+        return Pair.of(random.get(0), random.get(1));
     }
 
     private AddressEntity supplyAddress(LatLng latLng, String lang) {
         List<AddressEntity> decoded = googleApiGeoDecoder.decode(latLng, lang);
         return decoded.isEmpty() ? null : decoded.stream().findFirst().get();
-    }
-
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
-    public void saveOnComplete(TripRecordEntity generatedTrip) {
-        tripRecordRepository.save(generatedTrip);
     }
 }
